<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <!-- Logout first so it shows in app bar top-right -->
    <item
        android:id="@+id/action_logout"
        android:icon="@drawable/ic_logout"
        android:title="@string/logout"
        app:showAsAction="always"
        app:iconTint="@color/white" />
    <item
        android:id="@+id/action_personalized_drills"
        android:title="@string/personal_drills"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_assigned_drills"
        android:title="@string/assigned_drills"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_sessions"
        android:title="@string/total_sessions"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_reports"
        android:title="@string/reports"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_profile"
        android:title="@string/profile"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_games"
        android:title="@string/games"
        app:showAsAction="never" />
</menu>
