<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_overview"
            android:icon="@drawable/ic_menu_list_drawer"
            android:title="@string/overview" />
        <item
            android:id="@+id/nav_edit_profile"
            android:icon="@android:drawable/ic_menu_edit"
            android:title="@string/edit_profile" />
        <item
            android:id="@+id/nav_patients"
            android:icon="@android:drawable/ic_menu_my_calendar"
            android:title="@string/your_patients" />
        <item
            android:id="@+id/nav_talk_with_agent"
            android:icon="@android:drawable/ic_menu_info_details"
            android:title="@string/talk_with_agent" />
    </group>
    <item
        android:id="@+id/nav_logout"
        android:icon="@android:drawable/ic_menu_revert"
        android:title="@string/logout" />
</menu>
